/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package android.companion;

option java_multiple_files = true;

// Next index: 4
message Telecom {
  // Next index: 6
  message Call {
    // UUID representing this call
    string id = 1;

    message Origin {
      // Caller's name and/or phone number; what a user would see displayed when receiving an
      // incoming call on the local device
      string caller_id = 1;
      // Human-readable name of the app processing this call
      string app_name = 2;
      bytes app_icon = 3;
      // Unique identifier for this app, such as a package name.
      string app_identifier = 4;
    }
    Origin origin = 2;

    enum Status {
      UNKNOWN_STATUS = 0;
      RINGING = 1;
      ONGOING = 2;
      ON_HOLD = 3;
      RINGING_SILENCED = 4;
    }
    Status status = 3;

    repeated Control controls = 4;
  }

  enum Control {
    UNKNOWN_CONTROL = 0;
    ACCEPT = 1;
    REJECT = 2;
    SILENCE = 3;
    MUTE = 4;
    UNMUTE = 5;
    END = 6;
    PUT_ON_HOLD = 7;
    TAKE_OFF_HOLD = 8;
    REJECT_AND_BLOCK = 9;
    IGNORE = 10;
  }

  // The list of active calls.
  repeated Call calls = 1;
  // The list of requested calls or call changes.
  repeated Call requests = 2;
}
